--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,12 @@ chardet==3.0.4
 gspread==3.1.0
 httplib2==0.15.0
 idna==2.8
+memory-profiler==0.55.0
 oauth2client==4.1.3
+psutil==5.6.7
 pyasn1==0.4.8
 pyasn1-modules==0.2.7
+pyenchant==2.0.0
 requests==2.22.0
 rsa==4.0
 selenium==3.141.0
